# ddf

./: .gitignore  README.md  __init__.py  analytics.py  cache.py  catalog.py  cookies.py  itunes_client.py  main.py  models.py  pyproject.toml  requirements.txt  start.sh
.factory/: init.sh  services.yaml
.factory/skills/frontend-polish-worker/: SKILL.md
.factory/validation/integration-testing/scrutiny/: synthesis.json
.factory/validation/integration-testing/scrutiny/reviews/: cross-flow-apple-music-link-round2.json  cross-flow-apple-music-link.json  cross-flow-initial-load.json  cross-flow-interactions.json  fix-catalog-refresh-status.json  fix-error-handling-toast.json  fix-error-toast-verification.json  (+1 more)
.factory/validation/integration-testing/user-testing/: synthesis-round2.json  synthesis.json
.factory/validation/layout-viewport-parity/scrutiny/: synthesis.json
.factory/validation/layout-viewport-parity/user-testing/: synthesis.json
.factory/validation/loading-refinement/scrutiny/: synthesis.json
.factory/validation/loading-refinement/user-testing/: synthesis.json
.factory/validation/micro-interactions/scrutiny/: synthesis.json
.factory/validation/micro-interactions/user-testing/: synthesis.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/ui/: accordion.tsx  button.tsx  card.tsx  skeleton.tsx  toggle-group.tsx  tooltip.tsx
scripts/: dev.py
static/: style.css
templates/: _album_fragment.html  _album_panel.html  base.html  index.html
(+23 files in other folders)
